<resources>
    <string name="app_name">Simply mBanking</string>
    
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="change_user">Choose user</string>
    <string name="pin">PIN</string>
    <string name="name">First name</string>
    <string name="surname">Last name</string>
    <string name="forward">Continue</string>
    <string name="enter_your_pin">Enter your PIN</string>
    <string name="balance">Balance</string>
    <string name="last_transactions">Last transactions</string>
    <string name="stay_safe">Stay safe!</string>
    <string name="fingerprint">Fingerprint login</string>
    <string name="yes_caps">YES</string>
    <string name="no_caps">NO</string>
    <string name="choose_account">Choose account</string>
</resources>