<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkRed">

    <TextView
        android:id="@+id/login_register_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_slab"
        android:padding="8dp"
        android:text="@string/app_name"
        android:textColor="@color/White"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/login_register_popup_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_register_title_text_view">

        <TextView
            android:id="@+id/login_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:fontFamily="@font/roboto_slab_bold"
            android:text="@string/login"
            android:textColor="@color/Black"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/register_text_view"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/register_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/roboto_slab_bold"
            android:text="@string/register"
            android:textColor="@color/Black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@id/login_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/login_text_view"
            app:layout_constraintTop_toTopOf="@id/login_text_view" />

        <Button
            android:id="@+id/underline_button"
            android:layout_width="wrap_content"
            android:layout_height="6dp"
            android:background="@drawable/text_underline"
            android:clickable="false"
            app:layout_constraintEnd_toEndOf="@id/login_text_view"
            app:layout_constraintStart_toStartOf="@id/login_text_view"
            app:layout_constraintTop_toBottomOf="@id/login_text_view" />

        <TextView
            android:id="@+id/user_surname_login_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/roboto_slab_bold"
            android:textColor="@color/Black"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/user_name_login_text_view"
            app:layout_constraintTop_toTopOf="@id/user_name_login_text_view" />

        <TextView
            android:id="@+id/user_name_login_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/roboto_slab_bold"
            android:textColor="@color/Black"
            android:textSize="32sp"
            app:layout_constraintEnd_toStartOf="@+id/user_surname_login_text_view"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/underline_button" />

        <TextView
            android:id="@+id/change_user_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:fontFamily="@font/roboto_slab_bold"
            android:text="@string/change_user"
            android:textColor="@color/Black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="64dp"
            android:background="@drawable/text_underline"
            android:fontFamily="@font/roboto_slab_bold"
            android:padding="16dp"
            android:text="@string/login"
            android:textColor="@color/White"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_name_login_text_view" />

        <TextView
            android:id="@+id/welcome_back_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/roboto_slab"
            android:text="Welcome back"
            android:textColor="@color/Black"
            android:textSize="24sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/underline_button" />

        <TextView
            android:id="@+id/user_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:fontFamily="@font/roboto_slab_bold"
            android:textColor="@color/Black"
            android:textSize="40sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_back_text_view" />

        <Button
            android:id="@+id/finish_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/pin_button_background"
            android:padding="26dp"
            android:text="@string/forward"
            android:textColor="@color/White"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_animation"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/stay_safe_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/finish_login_button"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/handsanitizer" />

        <TextView
            android:id="@+id/stay_safe_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/stay_safe"
            android:textColor="@color/Black"
            android:textSize="24sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/change_user_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>