<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/enter_your_pin"
        android:textColor="@color/Black"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/pin_register_edit_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/custom_input_edit_text"
        android:drawableStart="@drawable/custom_edit_text_pin_icon"
        android:drawableEnd="@drawable/custom_edit_text_pin_icon"
        android:drawablePadding="8dp"
        android:focusable="false"
        android:gravity="center"
        android:hint="@string/pin"
        android:inputType="numberPassword"
        android:maxLength="6"
        android:maxLines="1"
        android:padding="8dp"
        android:textSize="14sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/pin_button_background"
            android:text="1"
            android:textColor="@color/White"
            app:layout_constraintEnd_toStartOf="@+id/button_2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/pin_button_background"
            android:text="2"
            android:textColor="@color/White"
            app:layout_constraintBottom_toBottomOf="@id/button_1"
            app:layout_constraintEnd_toStartOf="@+id/button_3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_1"
            app:layout_constraintTop_toTopOf="@id/button_1" />

        <Button
            android:id="@+id/button_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/pin_button_background"
            android:text="3"
            android:textColor="@color/White"
            app:layout_constraintBottom_toBottomOf="@id/button_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_2"
            app:layout_constraintTop_toTopOf="@id/button_1" />

        <Button
            android:id="@+id/button_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/pin_button_background"
            android:text="4"
            android:textColor="@color/White"
            app:layout_constraintEnd_toStartOf="@+id/button_5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_1" />

        <Button
            android:id="@+id/button_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/pin_button_background"
            android:text="5"
            android:textColor="@color/White"
            app:layout_constraintBottom_toBottomOf="@id/button_4"
            app:layout_constraintEnd_toStartOf="@+id/button_6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_4"
            app:layout_constraintTop_toTopOf="@id/button_4" />

        <Button
            android:id="@+id/button_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/pin_button_background"
            android:text="6"
            android:textColor="@color/White"
            app:layout_constraintBottom_toBottomOf="@id/button_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_5"
            app:layout_constraintTop_toTopOf="@id/button_4" />

        <Button
            android:id="@+id/button_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/pin_button_background"
            android:text="7"
            android:textColor="@color/White"
            app:layout_constraintEnd_toStartOf="@+id/button_8"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_4" />

        <Button
            android:id="@+id/button_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/pin_button_background"
            android:text="8"
            android:textColor="@color/White"
            app:layout_constraintBottom_toBottomOf="@id/button_7"
            app:layout_constraintEnd_toStartOf="@+id/button_9"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_7"
            app:layout_constraintTop_toTopOf="@id/button_7" />

        <Button
            android:id="@+id/button_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/pin_button_background"
            android:text="9"
            android:textColor="@color/White"
            app:layout_constraintBottom_toBottomOf="@id/button_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_8"
            app:layout_constraintTop_toTopOf="@id/button_8" />

        <Button
            android:id="@+id/button_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/pin_button_background"
            android:text="0"
            android:textColor="@color/White"
            app:layout_constraintEnd_toEndOf="@id/button_8"
            app:layout_constraintStart_toStartOf="@id/button_8"
            app:layout_constraintTop_toBottomOf="@id/button_8" />

        <ImageButton
            android:id="@+id/keyboard_delete_number_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background = "@drawable/backspace_delete_background"
            app:layout_constraintBottom_toBottomOf="@id/button_0"
            app:layout_constraintEnd_toEndOf="@id/button_9"
            app:layout_constraintStart_toStartOf="@id/button_9"
            app:layout_constraintTop_toTopOf="@id/button_0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/enable_disable_button_background"
        android:fontFamily="@font/roboto_slab_bold"
        android:padding="16dp"
        android:text="@string/register"
        android:textColor="@color/White" />


</LinearLayout>